<resources>
    <string name="app_name">BitBill</string>
    <string name="toast_using_network_type">正在使用 %1$s 网络</string>
    <string name="toast_switch_network_type">切换为 %1$s 网络</string>
    <string name="toast_network_available">网络可用</string>
    <string name="toast_network_no_connection">网络未连接</string>
    <string name="error_api_retry">请重试</string>
    <string name="error_api_default">出错了</string>
    <string name="some_error">出错了</string>
    <string name="error_connection">网络连接失败</string>
    <string name="error_api_server">请求失败</string>
    <string name="error_server_busy">服务器忙请稍后再试!</string>
    <string name="error_lack_madatory_params">缺少必要的参数</string>
    <string name="error_invalid_param_type">无效的参数类型</string>
    <string name="error_wallet_id_exsist">钱包id已存在</string>
    <string name="error_wallet_no_exsist">钱包不存在</string>
    <string name="error_ip_exceed_limit">您的IP超过了规定限制</string>
    <string name="connect">已连接</string>
    <string name="disconnect">断开连接，请检查你的网络连接</string>
    <string name="error_connect">连接失败</string>
    <string name="msg_push_receive_amount">"你收到了 %s BTC"</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_comfirm">确定</string>
    <string name="dialog_msg_request_permissions">扫描二维码需要打开相机和散光灯的权限</string>
    <string name="msg_dailog_input_2_confirm">请输入密码以确认</string>
    <string name="fail_update_install_apk">更新安装包失败，请稍后重试</string>
    <string name="dialog_title_update_app">更新安装包</string>
    <string name="dialog_title_download_app">下载安装包</string>
    <string name="dialog_msg_latest_version">最新版本为:v</string>
    <string name="dialog_btn_update">更新</string>
    <string name="fail_invalid_apk_url">下载地址有误，请稍后重试</string>
    <string name="btn_create_wallet">创建钱包</string>
    <string name="btn_import_wallet">导入钱包</string>
    <string name="guide_section_one">数字资产 All in one</string>
    <string name="guide_section_two">私钥掌握在你自己手里</string>
    <string name="guide_section_three">添加联系人 一键转账</string>
    <string name="title_activity_import_wallet">导入钱包</string>
    <string name="text_mnemonic">助记词</string>
    <string name="hint_input_mnemonic">通常十二个字</string>
    <string name="hint_click_input_please">请点击输入</string>
    <string name="hint_only_support_bip39">仅支持符合BIP39标准的助记词</string>
    <string name="btn_next">下一步</string>
    <string name="fail_input_menemonic">请正确填写助记词</string>
    <string name="fail_import_wallet">导入钱包失败，请重试</string>
    <string name="title_activity_create_wallet">创建钱包</string>
    <string name="dialog_btn_known">我知道了</string>
    <string name="dialog_title_support_coin_type">目前支持以下币种</string>
    <string name="hint_bottom_wallet_id">设定你的钱包ID，它可以关联你的联系人，支持字母、数字和下划线，仅能以字母开头，一旦设定不可修改。</string>
    <string name="hint_input_please">请输入</string>
    <string name="hint_input_wallet_id">请输入6-20位，以字母开头</string>
    <string name="hint_trade_pwd">请输入6-20位字符</string>
    <string name="input_wallet_id">钱包ID</string>
    <string name="input_trade_pwd">创建钱包密码</string>
    <string name="input_trade_pwd_confirm">确认钱包密码</string>
    <string name="btn_start_import">开始导入</string>
    <string name="btn_start_create">开始创建</string>
    <string name="error_wallet_id_required">请输入钱包ID，6-20位，以字母开头</string>
    <string name="error_wallet_id_length_required">钱包ID支持6-20位字符</string>
    <string name="error_invalid_wallet_id_start">ID仅能以字母开头</string>
    <string name="error_invalid_wallet_id">以字母开头，支持字母、数字和下划线</string>
    <string name="error_wallet_id_check_fail">检查钱包ID失败</string>
    <string name="error_trade_pwd_required">密码不能为空</string>
    <string name="error_invalid_trade_pwd">密码支持6-20位字符</string>
    <string name="error_confirm_trade_pwd_required">请输入确认钱包密码</string>
    <string name="error_trade_pwd_inconsistent">密码不一致</string>
    <string name="hint_back_up_pwd">请牢记您的密码！Bitbill不存储用户密码，无法提供找回或重置的功能</string>
    <string name="text_complete_agree">完成即表示你已同意</string>
    <string name="text_bibill_server_rule"><u>《Bitbill服务条款》</u></string>
    <string name="fail_init_wallet">初始化钱包失败，请重试</string>
    <string name="fail_get_wallet_info">获取钱包信息失败，请重试</string>
    <string name="fail_reset_wallet_pwd">重置密码失败，请重试</string>
    <string name="fail_create_wallet">钱包创建失败，请重试</string>
    <string name="title_activity_reset_pwd">重置钱包</string>
    <string name="hint_reset_pwd_success">钱包密码重置成功，请你务必保管好助记词和密码</string>
    <string name="title_reset_pwd_success">重置成功</string>
    <string name="title_wallet_create_success">创建成功</string>
    <string name="title_wallet_import_success">导入成功</string>
    <string name="hint_create_wallet_success">钱包创建成功，请你务必保管好助记词和密码</string>
    <string name="hint_import_wallet_success">钱包导入成功，请你务必保管好助记词和密码</string>
    <string name="btn_backup_wallet">备份钱包</string>
    <string name="btn_backup_wallet_delay">稍后备份</string>
    <string name="close">完成</string>
    <string name="title_activity_main">资产</string>
    <string name="title_asset">资产</string>
    <string name="title_receive">接收</string>
    <string name="title_send">发送</string>
    <string name="title_my">我</string>
    <string name="navigation_drawer_open">打开导航页</string>
    <string name="navigation_drawer_close">关闭导航页</string>
    <string name="fail_parse_tx_item">解析交易列表信息失败</string>
    <string name="fail_open_camera">相机打开失败，请检查权限</string>
    <string name="fail_parse_scan_result">解析扫描结果失败</string>
    <string name="tip_qrcode_scan">将二维码放入框内，即可自动扫描</string>
    <string name="action_select_photo">相册</string>
    <string name="fail_not_found_qrcode">未发现二维码</string>
    <string name="title_shortcut">快捷方式</string>
    <string name="text_go_to_setting_custom">前往设置自定义</string>
    <string name="text_short_cut_scan">扫一扫</string>
    <string name="text_short_cut_contact">添加联系人</string>
    <string name="text_current_currency_type">当前币种1个</string>
    <string name="title_total_assets">总资产</string>
    <string name="text_asset_btc">BTC</string>
    <string name="text_default_amount">0</string>
    <string name="text_asset_eth">eth</string>
    <string name="text_asset_bch">bch</string>
    <string name="text_asset_current_wallet">当前钱包 %1$d个</string>
    <string name="title_asset_my_wallet">我的钱包</string>
    <string name="menu_create_wallet">创建钱包</string>
    <string name="menu_import_wallet">导入钱包</string>
    <string name="text_in_progress_count">未确认交易 %d个</string>
    <string name="text_unconfirm_transaction">未确认交易</string>
    <string name="title_activity_backup_wallet">备份钱包</string>
    <string name="title_dialog_bakup_wallet">备份钱包</string>
    <string name="msg_dialg_input_correct_pwd">请输入正确的密码</string>
    <string name="hint_bak_wallet_environment_safe">请确认你所在的环境是安全隐私的，任何人拿到你的助记词都可以转移你的数字资产！</string>
    <string name="hint_bak_wallet_ban_screenshots">截图是不安全的，你的图片可能被别的应用使用。请抄写如下助记词，并妥善保存，我们会在下个屏幕上确认！</string>
    <string name="btn_written_mnemonic_in_order">已按顺序记下助记词</string>
    <string name="btn_confirm">确定</string>
    <string name="hint_bak_confirm_mnemonic_correct">按顺序点击助记词，确认你的助记词备份正确</string>
    <string name="hint_bak_wallet_success">备份成功</string>
    <string name="hint_keep_mnemonic">请妥善保管你的助记词</string>
    <string name="btn_complete">完成</string>
    <string name="fail_load_mnemonic">加载助记词失败</string>
    <string name="error_get_wallet_info_fail">获取钱包信息失败,请返回重试</string>
    <string name="fail_get_confirm_pwd">获取确认密码失败，请重新输入</string>
    <string name="hint_bak_wallet_click">请按顺序点击下方文字</string>
    <string name="title_dialog_backup_fail">备份失败</string>
    <string name="msg_dailog_check_mnemonic">请重新检查你的助记词是否正确</string>
    <string name="btn_backup_now">马上备份</string>
    <string name="action_empty_mnemonic">清空</string>
    <string name="text_btc_unconfirm">+ %s BTC 未确认</string>
    <string name="text_tx_record">交易记录</string>
    <string name="status_item_receive">已接收</string>
    <string name="status_item_send">已发送</string>
    <string name="status_item_unconfirm">待确认</string>
    <string name="status_item_transfer">已转移</string>
    <string name="fail_get_tx_record">获取交易记录失败</string>
    <string name="fail_load_balance">加载钱包余额失败</string>
    <string name="title_activity_transfer_details">交易详情</string>
    <string name="fail_load_transfer_details">加载交易详情失败，请返回重试</string>
    <string name="status_transfer_success">交易成功</string>
    <string name="status_transfer_unconfirm">待确认</string>
    <string name="title_tx_hash">交易hash</string>
    <string name="title_tx_receive_address">接收地址</string>
    <string name="title_tx_send_address">发送地址</string>
    <string name="title_tx_date">交易时间</string>
    <string name="title_tx_fee">手续费</string>
    <string name="title_tx_confirm">确认</string>
    <string name="title_tx_remark">备注</string>
    <string name="tx_my_address">我的地址&#160;</string>
    <string name="copy_send_address">发送地址已复制</string>
    <string name="copy_receive_address">接收地址已复制</string>
    <string name="copy_remark">备注已复制</string>
    <string name="copy_tx_date">交易时间已复制</string>
    <string name="copy_tx_hash">交易hash已复制</string>
    <string name="text_view_tx_in_blockchain"><u>去 Blockchain.info 查看交易</u></string>
    <string name="text_chose_browser">请选择浏览器</string>
    <string name="text_chose_email">请选择邮箱</string>
    <string name="text_receive_specific_amount"><u>特定金额接收</u></string>
    <string name="title_receive_address_refresh">刷新地址</string>
    <string name="dialog_title_friendly_remind">友情提醒</string>
    <string name="dialog_msg_change_address">为保护你的隐私，每次转入操作时，都将使用新地址，已使用的旧地址仍然可用</string>
    <string name="msg_copy_address_success">地址已复制</string>
    <string name="fail_load_address">加载地址失败</string>
    <string name="fail_reach_address_index_limit">暂时无法生成更多的地址了</string>
    <string name="fail_create_address_qrcode">生成地址二维码失败</string>
    <string name="fail_refresh_address">刷新地址失败</string>
    <string name="msg_refreshed_address">地址已刷新</string>
    <string name="title_back_up_now">当前钱包未备份，马上备份</string>
    <string name="title_activity_specific_receive">特定金额接收</string>
    <string name="title_activity_scan_pay">特定金额接收</string>
    <string name="fail_create_pay_qrcode">生成收款二维码失败，请返回重试</string>
    <string name="title_scan_pay_me">扫一扫向我支付</string>
    <string name="action_send_scan">扫一扫</string>
    <string name="hint_receiver_address">接收方地址</string>
    <string name="fail_get_contact_last_address">获取联系人最新地址失败</string>
    <string name="fail_get_contact_info">获取联系人信息失败</string>
    <string name="fail_invalid_address">地址不合法</string>
    <string name="fail_send_address_null">请输入地址</string>
    <string name="msg_coming_soon">即将支持，敬请期待</string>
    <string name="title_activity_send_amount">发送金额</string>
    <string name="msg_input_send_amount">请输入发送金额</string>
    <string name="msg_input_gt_zero_amount">请输入大于0的金额</string>
    <string name="msg_input_specifc_amount">请输入特定金额</string>
    <string name="input_contact_name">名称</string>
    <string name="input_contact_remark">备注</string>
    <string name="btn_confirm_add">确定添加</string>
    <string name="input_contact_address">数字资产地址</string>
    <string name="text_contact_wallet_id">钱包ID</string>
    <string name="btn_save">保存</string>
    <string name="btn_delete">删除</string>
    <string name="title_main_shortcut">快捷方式</string>
    <string name="title_account_info">账户信息</string>
    <string name="title_security">安全设置</string>
    <string name="title_wallet_manage">钱包集成</string>
    <string name="title_contact">联系人</string>
    <string name="title_other">其他</string>
    <string name="title_about_us">关于我们</string>
    <string name="setting_sound">音效</string>
    <string name="setting_currency">货币</string>
    <string name="setting_languge">当前语言</string>
    <string name="languge_simplified_chinese">简体中文</string>
    <string name="text_cny">CNY</string>
    <string name="text_use_rule">使用条款</string>
    <string name="text_contact_us">联系我们</string>
    <string name="left_check_version">检查更新</string>
    <string name="app_bitbill_email">hi@bitbill.com</string>
    <string name="title_feedback_contact">联系方式（选填）</string>
    <string name="hint_feedback_contact">请输入邮箱/手机/微信</string>
</resources>