<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context="com.bitbill.www.ui.wallet.init.CreateWalletIdActivity">

    <com.bitbill.www.common.base.view.widget.EditTextWapper
        android:id="@+id/etw_wallet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:bottomHint="@string/hint_bottom_wallet_id"
        app:inputHint="@string/hint_input_wallet_id"
        app:inputPaddingBottom="10dp"
        app:inputTitle="@string/input_wallet_id"
        />

    <Button
        android:id="@+id/btn_next"
        style="@style/Button.Blue"
        android:layout_marginTop="30dp"
        android:text="@string/btn_next"/>
</LinearLayout>
