<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="25dp"
    tools:context="com.bitbill.www.ui.wallet.init.InitWalletActivity">


    <LinearLayout
        android:id="@+id/init_wallet_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.bitbill.www.common.widget.EditTextWapper
            android:id="@+id/etw_trade_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:inputHint="@string/hint_trade_pwd"
            app:inputPaddingBottom="10dp"
            app:inputPwdStatusVisible="true"
            app:inputTitle="@string/input_trade_pwd"
            app:inputType="inputPasswordHide" />

        <com.bitbill.www.common.widget.EditTextWapper
            android:id="@+id/etw_trade_pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:inputHint="@string/hint_input_please"
            app:inputPaddingBottom="10dp"
            app:inputTitle="@string/input_trade_pwd_confirm"
            app:inputType="inputPasswordHide" />

        <TextView
            style="@style/Text.Small.Green"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/hint_back_up_pwd" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <include layout="@layout/layout_service_rule" />

        <Button
            android:id="@+id/btn_start"
            style="@style/Button.Blue"
            android:layout_marginTop="30dp"
            android:text="@string/btn_complete" />
    </LinearLayout>
</FrameLayout>
