<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context="com.bitbill.www.ui.main.contact.EditContactActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_top_title"
                style="@style/Text.White"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/text_contact_wallet_id"/>

            <TextView
                android:id="@+id/tv_top_content"
                style="@style/Text.White.Big"
                android:layout_marginTop="@dimen/dp_8" />
        </LinearLayout>

        <com.bitbill.www.common.widget.EditTextWapper
            android:id="@+id/etw_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            app:inputHint="@string/hint_input_please"
            app:inputPaddingBottom="@dimen/dp_10"
            app:inputTitle="@string/input_contact_name"/>


        <com.bitbill.www.common.widget.EditTextWapper
            android:id="@+id/etw_contact_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            app:inputHint="@string/hint_input_please"
            app:inputPaddingBottom="@dimen/dp_10"
            app:inputTitle="@string/input_contact_remark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <Button
            android:id="@+id/btn_save"
            style="@style/Button.Transparent.Corner.White"
            android:layout_width="match_parent"
            android:text="@string/btn_save"
            />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Button.Transparent.White60"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/btn_delete"
            />
    </LinearLayout>


</FrameLayout>