<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_padding">

    <EditText
        android:id="@+id/et_feeback_content"
        style="@style/EditText.Mnemonic"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_input_please"/>

    <com.bitbill.www.common.widget.EditTextWapper
        android:id="@+id/etw_feeback_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:inputHint="@string/hint_feedback_contact"
        app:inputPaddingBottom="10dp"
        app:inputTitle="@string/title_feedback_contact" />

</LinearLayout>