<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context="com.bitbill.www.ui.main.contact.SearchContactResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bitbill.www.common.base.view.widget.EditTextWapper
            android:id="@+id/etw_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:inputHint="@string/hint_input_please"
            app:inputPaddingBottom="10dp"
            app:inputTitle="@string/input_contact_name" />


        <com.bitbill.www.common.base.view.widget.EditTextWapper
            android:id="@+id/etw_contact_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:inputHint="@string/hint_input_please"
            app:inputPaddingBottom="10dp"
            app:inputTitle="@string/input_contact_remark" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_add"
        style="@style/Button.Transparent.Corner.White"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="55dp"
        android:text="@string/btn_confirm_add" />
</FrameLayout>
