<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.bitbill.www.ui.main.my.AboutUsActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/tv_version"
        style="@style/Text.Setting.White60"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="@dimen/activity_padding"
        android:text="v0.01"
        android:textSize="12dp"/>

    <com.bitbill.www.common.widget.SettingView
        android:id="@+id/sv_use_rule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hasBottomLine="true"
        app:leftString="@string/text_use_rule"
        app:rightResource="@drawable/ic_right_arrow"/>

    <com.bitbill.www.common.widget.SettingView
        android:id="@+id/sv_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hasBottomLine="true"
        app:leftString="@string/text_contact_us"
        app:rightResource="@drawable/ic_right_arrow"
        app:rightString="@string/app_bitbill_email"/>

    <com.bitbill.www.common.widget.SettingView
        android:id="@+id/sv_check_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftString="@string/left_check_version"
        app:rightResource="@drawable/ic_right_arrow"/>

</LinearLayout>
