<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.bitbill.www.ui.wallet.backuped.BackupWalletSuccessActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:src="@drawable/ic_wallet_create_success"/>

    <TextView
        style="@style/Text.Title.Small"
        android:layout_marginTop="20dp"
        android:text="@string/hint_bak_wallet_success"/>

    <TextView
        style="@style/Text.White"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/hint_keep_mnemonic"/>

    <Button
        android:id="@+id/btn_complete"
        style="@style/Button.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_complete"/>

</LinearLayout>