<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bitbill.www.ui.wallet.init.InitWalletSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_65"
            android:src="@drawable/ic_wallet_create_success" />

        <TextView
            android:id="@+id/tv_hint_title"
            style="@style/Text.Title.Small"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/title_wallet_create_success" />

        <TextView
            android:id="@+id/tv_hint_content"
            style="@style/Text.White"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_45"
            android:layout_marginRight="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/hint_create_wallet_success" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_bak_wallet"
            style="@style/Button.Blue"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/btn_backup_wallet" />

        <Button
            android:id="@+id/btn_bak_wallet_delay"
            style="@style/Button.Transparent"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/btn_backup_wallet_delay"
            android:textColor="@color/white_60" />
    </LinearLayout>
</FrameLayout>